<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/settings"
	android:key="settings">
	<PreferenceCategory
		android:title="@string/color_settings"
		android:key="color_settings">
		<ListPreference
			android:key="theme"
			android:title="@string/theme"
			android:summary="@string/theme_summary"
			android:entries="@array/theme_names"
			android:entryValues="@array/theme_values"
			android:defaultValue="blue"/>
		<Preference
			android:title="@string/compositor"
			android:summary="@string/compositor_summary">
			<intent
				android:action="android.intent.action.VIEW"
				android:targetPackage="de.markusfisch.android.wavelines"
				android:targetClass="de.markusfisch.android.wavelines.ColorCompositor"/>
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/wave_settings"
		android:key="wave_settings">
		<CheckBoxPreference
			android:key="coupled"
			android:title="@string/coupled"
			android:summary="@string/coupled_summary"
			android:checked="true"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="uniform"
			android:title="@string/uniform"
			android:summary="@string/uniform_summary"
			android:checked="false"
			android:defaultValue="false"/>
		<ListPreference
			android:key="lines"
			android:title="@string/lines"
			android:summary="@string/lines_summary"
			android:entries="@array/lines_names"
			android:entryValues="@array/lines_values"
			android:defaultValue="24"/>
		<ListPreference
			android:key="waves"
			android:title="@string/waves"
			android:summary="@string/waves_summary"
			android:entries="@array/waves_names"
			android:entryValues="@array/waves_values"
			android:defaultValue="3"/>
		<ListPreference
			android:key="amplitude"
			android:title="@string/amplitude"
			android:summary="@string/amplitude_summary"
			android:entries="@array/amplitude_names"
			android:entryValues="@array/amplitude_values"
			android:defaultValue=".02"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/performance_settings"
		android:key="performance_settings">
		<ListPreference
			android:key="delay"
			android:title="@string/delay"
			android:summary="@string/delay_summary"
			android:entries="@array/delay_names"
			android:entryValues="@array/delay_values"
			android:defaultValue="100"/>
	</PreferenceCategory>
</PreferenceScreen>
